--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
         function speakWelcomeMessage() {
             if ('speechSynthesis' in window) {
                 const utterance = new SpeechSynthesisUtterance();
-                utterance.text = "Welcome to iOS WhatsApp. We offer you a different WhatsApp, and one of its main features is its similarity to WhatsApp on iPhone devices. This app was developed by Mohamed Ashraf.";
+                utterance.text = "Welcome to iOS WhatsApp. We offer you a different WhatsApp, and one of its main features is its similarity to WhatsApp on iPhone devices. This app was developed by Mohamed Ashraf , GoodBye and stay safe.";
                 utterance.lang = 'en-US';
                 utterance.rate = 0.9;
                 utterance.pitch = 0.8;
@@ -1232,3 +1232,4 @@
     </script>
 </body>
 </html>
+
